<resources>
    <string name="app_name">TripOrganizer</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="fpass">Forgot Password?</string>
    <string name="connect">or connect using</string>
    <string name="donthave">Don\'t have an account?!</string>
    <string name="signup">Sign Up</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have an account?! <b><i><font color='#5A425C'>Sign In</font></i></b></string>
    <string name="valid_email">Enter valid Email</string>
    <string name="valid_userName">Enter valid UserName</string>
    <string name="valid_confirm_password">Confirm Password is not equal Password</string>
    <string name="valid_password">Enter password Length equal 4</string>
    <string name="empty_password">Enter password </string>
    <string name="empty_confirm_password">Enter confirm password </string>

    <string name="enteremail">You have to enter an email</string>
    <string name="enterpassword">You have to enter a password</string>
    <string name="start">Start</string>

    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="title">Title</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="single">Single</string>
    <string name="round">Round</string>
    <string name="date1">Date1</string>
    <string name="time1">Time1</string>
    <string name="date2">Date2</string>
    <string name="time2">Time2</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>
    <string name="etitle">Enter Trip Name</string>
    <string name="addTrip">Add Trip</string>
    <string name="editTrip">Edit Trip</string>
    <string name="estart_point">Enter Start Point</string>
    <string name="eend_point">Enter End Point</string>
    <string name="edate">Pick Date</string>
    <string name="etime">Pick Time</string>
    <string name="enternote">Add Note</string>
    <string name="facebook_app_id">497010691251023</string>
    <string name="fb_login_protocol_scheme">fb497010691251023</string>

    <string name="google_places_api_key">AIzaSyDrhEBrA9oj5N0zD7VAwk0EHv0exMbc0Cc</string>

    <string name="user_name">User Name</string>

    <string name="next_trip">Next Trip</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="buy_items">Buy items from supermarket</string>
    <string name="later">LATER</string>
    <string name="cancel">Cancel</string>
    <string name="end">End</string>
    <string name="delete_trip">Are you sure to delete trip ?!</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>

    <string name="snooze">Snooze(30 min)</string>
    <string name="myTrips">My Trips</string>
    <string name="history">History</string>

    <string name="plzEnterTripName">You have to enter trip name</string>
    <string name="plzEnterStartPoint">You have to enter start point</string>
    <string name="plzEnterEndPoint">You have to enter end point</string>
    <string name="plzPickDate">You have to pick a date</string>
    <string name="plzPickStartDate">You have to pick  start date</string>
    <string name="plzPickEndDate">You have to pick end date</string>
    <string name="plzPickValidEndDate">End Date has to occurs After Start Date</string>
    <string name="plzPickTime">You have to pick a time</string>
    <string name="plzPickStartTime">You have to pick start time</string>
    <string name="plzPickEndTime">You have to pick end time</string>
    <string name="plzPickValidEndTime">End Time has to occurs after Start Time</string>
    <string name="plzPickValidStartDate_current">Start Date has to occurs After Current Date</string>
    <string name="plzPickValidStartTime_current">Start Time has to occurs After Current Time</string>
    <string name="plzPickDateFirst">You have to pick a date first</string>
    <string name="plzPickStartTimeFirst">You have to pick a start time first</string>
    <string name="plzPickStartDateFirst">You have to pick a start date first</string>

    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="email_success_updated">Email is updated successfully!</string>
    <string name="email_failed_updated">Update email is failed ,please try later!</string>
    <string name="pass_success_updated">Password is updated successfully!</string>
    <string name="pass_failed_updated">Update Password is failed ,please try later!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addnoteimg">addNoteImg</string>
    <string name="notrips">There is no Upcoming Trips !
        \n Tap the button below to get started! </string>

    <string name="nohistory">There is no History Trips!</string>

    <string name="cdelete">Are You sure to delete this trip ?!</string>
    <string name="removed">Removed from trips</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>


</resources>