<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_trip"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/myTrips" />
    <item
        android:id="@+id/historyFragment"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:icon="@drawable/ic_start_gray_24dp"
        android:title="@string/history" />
    <item
        android:id="@+id/profileFragment3"
        android:icon="@drawable/ic_user_24dp"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/profile" />
</menu>
