<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_card_no_clr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            style="@style/titles_details"
            android:layout_marginTop="32dp"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@+id/tripTitleEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tripTitleEt"
            style="@style/edittext_details"
            android:ems="10"
            android:hint="@string/etitle"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <TextView
            android:id="@+id/textView4"
            style="@style/titles_details"
            android:text="@string/start_point"
            app:layout_constraintBottom_toTopOf="@+id/startPointEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripTitleEt" />

        <TextView
            android:id="@+id/textView5"
            style="@style/titles_details"
            android:text="@string/end_point"
            app:layout_constraintBottom_toTopOf="@+id/endPointEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startPointEt" />

        <EditText
            android:id="@+id/endPointEt"
            style="@style/edittext_details"
            android:ems="10"
            android:hint="@string/eend_point"
            app:layout_constraintBottom_toTopOf="@+id/singleBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/startPointEt"
            style="@style/edittext_details"
            android:ems="10"
            android:hint="@string/estart_point"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/singleBtn"
            style="@style/trip_type_btn"
            android:layout_marginTop="8dp"
            android:text="@string/single"
            app:layout_constraintEnd_toStartOf="@+id/roundBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endPointEt" />

        <Button
            android:id="@+id/roundBtn"
            style="@style/trip_type_btn"
            android:layout_marginTop="8dp"
            android:text="@string/round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/singleBtn"
            app:layout_constraintTop_toBottomOf="@+id/endPointEt" />

        <TextView
            android:id="@+id/date1Tv"
            style="@style/titles_details"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roundBtn" />

        <EditText
            android:id="@+id/date1Et"
            style="@style/edittext_details"
            android:drawableLeft="@drawable/ic_date_gray_24dp"
            android:drawablePadding="@dimen/d_5"
            android:ems="10"
            android:hint="@string/edate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date1Tv" />

        <TextView
            android:id="@+id/time1Tv"
            style="@style/titles_details"
            android:text="@string/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date1Et" />

        <EditText
            android:id="@+id/timeEt1"
            style="@style/edittext_details"
            android:drawableLeft="@drawable/ic_time_gray_24dp"
            android:drawablePadding="@dimen/d_5"
            android:ems="10"
            android:hint="@string/etime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time1Tv" />

        <TextView
            android:id="@+id/date2Tv"
            style="@style/titles_details"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeEt1" />

        <EditText
            android:id="@+id/dateEt2"
            style="@style/edittext_details"
            android:drawableLeft="@drawable/ic_date_gray_24dp"
            android:drawablePadding="@dimen/d_5"
            android:ems="10"
            android:hint="@string/edate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date2Tv" />

        <TextView
            android:id="@+id/time2Tv"
            style="@style/titles_details"
            android:text="@string/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateEt2" />

        <TextView
            android:id="@+id/textView11"
            style="@style/titles_details"
            android:layout_width="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/notes"
            app:layout_constraintEnd_toStartOf="@+id/addNoteImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeEt2" />

        <EditText
            android:id="@+id/timeEt2"
            style="@style/edittext_details"
            android:drawableLeft="@drawable/ic_time_gray_24dp"
            android:drawablePadding="@dimen/d_5"
            android:ems="10"
            android:hint="@string/etime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time2Tv" />


        <ImageView
            android:id="@+id/addNoteImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeEt2"
            app:srcCompat="@drawable/ic_plus" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>