<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/userEmailEt"
        style="@style/edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_user_24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/passwordEt"
        style="@style/edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_lock_24dp"
        android:hint="@string/pass"
        app:layout_constraintEnd_toEndOf="@+id/userEmailEt"
        app:layout_constraintStart_toStartOf="@+id/userEmailEt"
        app:layout_constraintTop_toBottomOf="@+id/userEmailEt" />

    <TextView
        android:id="@+id/forgetPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:text="@string/fpass"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/passwordEt"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

    <Button
        android:id="@+id/signInBtn"
        style="@style/signinup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="@+id/forgetPasswordTv"
        app:layout_constraintStart_toStartOf="@+id/passwordEt"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordTv" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/connect"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintStart_toStartOf="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

    <ImageView
        android:id="@+id/facebookImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_fb"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/googleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_google" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/donthave"
        app:layout_constraintEnd_toStartOf="@+id/signUpTv"
        app:layout_constraintStart_toStartOf="@+id/facebookImageView"
        app:layout_constraintTop_toBottomOf="@+id/facebookImageView" />

    <TextView
        android:id="@+id/signUpTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>