<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/d_16"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_card_no_clr">
    <TextView
        android:id="@+id/textView3"
        style="@style/titles_details"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tripNameEt"
        style="@style/tripdetails_edittext"
        android:ems="10"
        android:hint="@string/etitle"
        android:padding="@dimen/d_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tripNameTv"
        style="@style/tripdetails_textview"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripNameEt"
        tools:text="TripName" />

    <TextView
        android:id="@+id/textView4"
        style="@style/titles_details"
        android:text="@string/start_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripNameTv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startPointConstraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tripdetails_edittext"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <fragment android:id="@+id/startAutoCompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/startPointTv"
        style="@style/tripdetails_textview"
        tools:text="StartPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startPointConstraintlayout" />

    <TextView
        android:id="@+id/textView5"
        style="@style/titles_details"
        android:text="@string/end_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startPointTv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/endPointConstraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tripdetails_edittext"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <fragment android:id="@+id/endAutoCompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/endPointTv"
        style="@style/tripdetails_textview"
        tools:text="EndPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endPointConstraintlayout" />

    <Button
        android:id="@+id/singleBtn"
        style="@style/trip_type_btn"
        android:layout_marginTop="8dp"
        android:text="@string/single"
        app:layout_constraintEnd_toStartOf="@+id/roundBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endPointTv" />

    <Button
        android:id="@+id/roundBtn"
        style="@style/trip_type_btn"
        android:layout_marginTop="8dp"
        android:text="@string/round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/singleBtn"
        app:layout_constraintTop_toBottomOf="@+id/endPointTv"/>
    <TextView
        android:id="@+id/date1TitleTv"
        style="@style/titles_details"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundBtn" />

    <TextView
        android:id="@+id/date1Tv"
        style="@style/tripdetails_edittext"
        android:drawableLeft="@drawable/ic_date_gray_24dp"
        android:drawablePadding="@dimen/d_5"
        android:padding="@dimen/d_15"
        android:ems="10"
        android:hint="@string/edate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date1TitleTv" />
    <TextView
        android:id="@+id/date1ViewTv"
        style="@style/tripdetails_textview"
        tools:text="Date1"
        android:drawableLeft="@drawable/ic_date_gray_24dp"
        android:drawablePadding="@dimen/d_5"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date1Tv" />
    <TextView
        android:id="@+id/time1TitleTv"
        style="@style/titles_details"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date1ViewTv" />

    <TextView
        android:id="@+id/time1Tv"
        style="@style/tripdetails_edittext"
        android:drawableLeft="@drawable/ic_time_gray_24dp"
        android:drawablePadding="@dimen/d_5"
        android:padding="@dimen/d_15"
        android:ems="10"
        android:hint="@string/etime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time1TitleTv" />
    <TextView
        android:id="@+id/time1ViewTv"
        style="@style/tripdetails_textview"
        tools:text="Time1"
        android:drawableLeft="@drawable/ic_time_gray_24dp"
        android:drawablePadding="@dimen/d_5"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time1Tv" />
    <TextView
        android:id="@+id/date2TitleTv"
        style="@style/titles_details"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time1ViewTv" />

    <TextView
        android:id="@+id/date2Tv"
        style="@style/tripdetails_edittext"
        android:drawableLeft="@drawable/ic_date_gray_24dp"
        android:drawablePadding="@dimen/d_5"
        android:padding="@dimen/d_15"
        android:ems="10"
        android:hint="@string/edate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date2TitleTv" />

    <TextView
        android:id="@+id/date2ViewTv"
        style="@style/tripdetails_textview"
        tools:text="Date2"
        android:drawableLeft="@drawable/ic_date_gray_24dp"
        android:drawablePadding="@dimen/d_5"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date2Tv" />

    <TextView
        android:id="@+id/time2TitleTv"
        style="@style/titles_details"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date2ViewTv" />

    <TextView
        android:id="@+id/time2Tv"
        style="@style/tripdetails_edittext"
        android:drawableLeft="@drawable/ic_time_gray_24dp"
        android:drawablePadding="@dimen/d_15"
        android:padding="@dimen/d_15"
        android:ems="10"
        android:hint="@string/etime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time2TitleTv" />

    <TextView
        android:id="@+id/time2ViewTv"
        style="@style/tripdetails_textview"
        tools:text="Time2"
        android:drawableLeft="@drawable/ic_time_gray_24dp"
        android:drawablePadding="@dimen/d_5"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time2Tv" />

    <ImageView
        android:id="@+id/addNoteImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time2ViewTv"
        app:srcCompat="@drawable/ic_plus" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNoteImageView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_recyclerview"
        app:srcCompat="@drawable/ic_done_white_24dp" />

    <TextView
        android:id="@+id/textView6"
        style="@style/title"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time2ViewTv" />


</androidx.constraintlayout.widget.ConstraintLayout>